# straya-mapp

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
frontend/: index.html
frontend/css/: styles.css
frontend/favicon/: site.webmanifest
frontend/js/: main.js
preprocessing/: 1_export_and_remove_duplicates.py  2_get_model_scores.py  3_get_stats.py  4_export_images_for_web.py  cluster_similar_images.py  delete_helpers.py  remove_duplicates.py  review_images.py
supabase/: retry_upload.py  upload.py
